--- a/src/EcoTrace_frontend/src/index.scss
+++ b/src/EcoTrace_frontend/src/index.scss
@@ -1,37 +1,111 @@
+h1,h2,h3,h4,p {
+  font-family: Impact,Haettenschweiler,Arial Narrow Bold,sans-serif
+}
+
 body {
-  font-family: sans-serif;
-  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  font-family: Arial,sans-serif;
+  background-color: #16151a;
+  color: #15161a
 }
 
-img {
-  max-width: 50vw;
-  max-height: 25vw;
-  display: block;
-  margin: auto;
+#background {
+  width: 100%;
+  height: auto
 }
 
-form {
+.containerHeader,.containerContent {
+  max-width: 800px
+}
+
+.header {
+  margin-top: -665px;
+  margin-left: 88%
+}
+
+.header .container {
   display: flex;
-  justify-content: center;
-  gap: 0.5em;
-  flex-flow: row wrap;
-  max-width: 40vw;
-  margin: auto;
-  align-items: baseline;
+  justify-content: flex-start;
+  align-items: center
 }
 
-button[type="submit"] {
-  padding: 5px 20px;
-  margin: 10px auto;
-  float: right;
+.subscribe-button {
+  background-color: #7b166f;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer
 }
 
-#greeting {
-  margin: 10px auto;
-  padding: 10px 60px;
-  border: 1px solid #222;
+.main-content {
+  text-align: center;
+  padding: 100px 0;
+  color: #fff
 }
 
-#greeting:empty {
-  display: none;
+#icp {
+  width: 100px
+}
+
+h1 {
+  font-size: 78px;
+  margin-bottom: 20px
+}
+
+p {
+  font-size: 18px;
+  margin-bottom: 30px
+}
+
+.form-button {
+  position: absolute;
+  background-color: #3498db;
+  color: #fff;
+  border: none;
+  padding: 15px 30px;
+  font-size: 20px;
+  cursor: pointer
+}
+
+.icplogo {
+  width: 250px
+}
+
+h1,h2,h3,p {
+  color: #fff;
+  font-family: Franklin Gothic Medium,Arial Narrow,Arial,sans-serif
+}
+
+h1 {
+  font-size: medium
+}
+
+h2 {
+  font-size: small
+}
+
+p {
+  font-size: 16px
+}
+
+.Section {
+  width: 100%;
+  padding: 20%
+}
+
+.Noticias {
+  display: block
+}
+
+.Cards {
+  background: rgba(65,117,5,.55);
+  box-shadow: 0 8px 32px #1f26875e;
+  backdrop-filter: blur(8.5px);
+  -webkit-backdrop-filter: blur(8.5px);
+  border-radius: 10px;
+  width: 20%;
+  margin: 16px;
+  padding: 22px;
 }
